--- a/RWD/index.html
+++ b/RWD/index.html
@@ -3,20 +3,30 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>RWD</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/small-default.css">
-    <link rel="stylesheet" href="css/medium.css">
-    <link rel="stylesheet" href="css/large.css">
+    <link rel="stylesheet" href="../RWD/css/style.css">
+   
 </head>
 
 <body>
-    <h1>Lorem ipsum</h1>
-    <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda iste quos impedit molestiae reiciendis tempore Aut,
-        inventore optio vero aliquid quod fugit enim modi earum! Est consequatur beatae culpa inventore fuga! A est iure
-        ipsa culpa fugit, sapiente natus neque?</p>
+    <!--PAGE HEADER-->
+    <header>
+
+    </header>
+    <!--PAGE NAVIGATION-->
+    <nav>
+
+    </nav>
+    <!--PAGE CONTENT-->
+    <main>
+
+    </main>
+    <!--PAGE FOOTER-->
+    <footer>
+
+    </footer>
 
 </body>
 
