--- a/RWD/index.html
+++ b/RWD/index.html
@@ -7,25 +7,33 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>RWD</title>
     <link rel="stylesheet" href="../RWD/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,700" rel="stylesheet">
    
 </head>
 
 <body>
     <!--PAGE HEADER-->
     <header>
-
+        <h1>Paul's Autos
+            <h2>Quality you can ride in!</h2>
+        </h1>
     </header>
     <!--PAGE NAVIGATION-->
     <nav>
-
+        <ul class="clearfix">
+            <li><a href="index.html">New</a></li>
+            <li><a href="used.html">Used</a></li>
+            <li><a href="service.html">Service</a></li>
+            <li><a href="location.html">Location</a></li>
+        </ul>
     </nav>
     <!--PAGE CONTENT-->
     <main>
-
+        <h1>New Cars</h1>
     </main>
     <!--PAGE FOOTER-->
     <footer>
-
+        <p>&copy;2018 Paul's Autos &bull; <a href="tel:9875551234">987-555-1234</a></p>
     </footer>
 
 </body>
