--- a/RWD/index.html
+++ b/RWD/index.html
@@ -19,9 +19,9 @@
         </h1>
     </header>
     <!--PAGE NAVIGATION-->
-    <nav>
+    <nav class="clearfix">
         <ul class="clearfix">
-            <li><a href="index.html">New</a></li>
+            <li class="active"><a href="index.html">New</a></li>
             <li><a href="used.html">Used</a></li>
             <li><a href="service.html">Service</a></li>
             <li><a href="location.html">Location</a></li>
