--- a/RWD/index.html
+++ b/RWD/index.html
@@ -29,7 +29,12 @@
     </nav>
     <!--PAGE CONTENT-->
     <main>
+        <figure class="banner"> 
+            <img src="img/car1.png" alt="banner of a car">
+        </figure>
         <h1>New Cars</h1>
+        <hr class="fadeAway">
+       
     </main>
     <!--PAGE FOOTER-->
     <footer>
