--- a/RWD/index.html
+++ b/RWD/index.html
@@ -8,7 +8,7 @@
     <title>RWD</title>
     <link rel="stylesheet" href="../RWD/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,700" rel="stylesheet">
-   
+
 </head>
 
 <body>
@@ -21,24 +21,120 @@
     <!--PAGE NAVIGATION-->
     <nav class="clearfix">
         <ul class="clearfix">
-            <li class="active"><a href="index.html">New</a></li>
-            <li><a href="used.html">Used</a></li>
-            <li><a href="service.html">Service</a></li>
-            <li><a href="location.html">Location</a></li>
+            <li class="active">
+                <a href="index.html">New</a>
+            </li>
+            <li>
+                <a href="used.html">Used</a>
+            </li>
+            <li>
+                <a href="service.html">Service</a>
+            </li>
+            <li>
+                <a href="location.html">Location</a>
+            </li>
         </ul>
     </nav>
     <!--PAGE CONTENT-->
-    <main>
-        <figure class="banner"> 
-            <img src="img/car1.png" alt="banner of a car">
+    <main class="clearfix">
+        <figure class="banner">
+            <img src="img/carCar.JPG" alt="banner of a car">
         </figure>
         <h1>New Cars</h1>
         <hr class="fadeAway">
-       
+
+        <figure class="photo">
+            <img src="img/car1.png" alt="">
+            <figcaption>SALE: $30,997.00</figcaption>
+        </figure>
+        <figure class="photo">
+            <img src="img/car0.png" alt="">
+            <figcaption>SALE: $33,990.00</figcaption>
+        </figure>
+        <figure class="photo">
+            <img src="img/car3.png" alt="">
+            <figcaption>SALE: $80,500.00</figcaption>
+        </figure>
+        <figure class="photo">
+            <img src="img/car2.png" alt="">
+            <figcaption>SALE: $101,200.00</figcaption>
+        </figure>
+        <h2>Blog Topics</h2>
+        <div class="blog">
+            <article>
+                <h3>Topic 1</h3>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. A labore minima quam ea consectetur asperiores voluptatibus repudiandae
+                    fugiat architecto ratione, sit et ad corrupti distinctio incidunt adipisci error odit iste enim repellat
+                    possimus voluptatum accusamus alias. Minus, cumque sed fuga neque deleniti aut est soluta quis. Porro
+                    vel natus animi.
+                </p>
+            </article>
+            <article>
+                <h3>Topic 2</h3>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. A labore minima quam ea consectetur asperiores voluptatibus repudiandae
+                    fugiat architecto ratione, sit et ad corrupti distinctio incidunt adipisci error odit iste enim repellat
+                    possimus voluptatum accusamus alias. Minus, cumque sed fuga neque deleniti aut est soluta quis. Porro
+                    vel natus animi.
+                </p>
+            </article>
+            <article>
+                <h3>Topic 3</h3>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. A labore minima quam ea consectetur asperiores voluptatibus repudiandae
+                    fugiat architecto ratione, sit et ad corrupti distinctio incidunt adipisci error odit iste enim repellat
+                    possimus voluptatum accusamus alias. Minus, cumque sed fuga neque deleniti aut est soluta quis. Porro
+                    vel natus animi.
+                </p>
+            </article>
+            <article>
+                <h3>Topic 4</h3>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. A labore minima quam ea consectetur asperiores voluptatibus repudiandae
+                    fugiat architecto ratione, sit et ad corrupti distinctio incidunt adipisci error odit iste enim repellat
+                    possimus voluptatum accusamus alias. Minus, cumque sed fuga neque deleniti aut est soluta quis. Porro
+                    vel natus animi.
+                </p>
+            </article>
+            <article>
+                <h3>Topic 5</h3>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. A labore minima quam ea consectetur asperiores voluptatibus repudiandae
+                    fugiat architecto ratione, sit et ad corrupti distinctio incidunt adipisci error odit iste enim repellat
+                    possimus voluptatum accusamus alias. Minus, cumque sed fuga neque deleniti aut est soluta quis. Porro
+                    vel natus animi.
+                </p>
+                <h3>Topic 6</h3>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. A labore minima quam ea consectetur asperiores voluptatibus repudiandae
+                    fugiat architecto ratione, sit et ad corrupti distinctio incidunt adipisci error odit iste enim repellat
+                    possimus voluptatum accusamus alias. Minus, cumque sed fuga neque deleniti aut est soluta quis. Porro
+                    vel natus animi.
+                </p>
+                <h3>Topic 7</h3>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. A labore minima quam ea consectetur asperiores voluptatibus repudiandae
+                    fugiat architecto ratione, sit et ad corrupti distinctio incidunt adipisci error odit iste enim repellat
+                    possimus voluptatum accusamus alias. Minus, cumque sed fuga neque deleniti aut est soluta quis. Porro
+                    vel natus animi.
+                </p>
+                <h3>Topic 8</h3>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. A labore minima quam ea consectetur asperiores voluptatibus repudiandae
+                    fugiat architecto ratione, sit et ad corrupti distinctio incidunt adipisci error odit iste enim repellat
+                    possimus voluptatum accusamus alias. Minus, cumque sed fuga neque deleniti aut est soluta quis. Porro
+                    vel natus animi.
+                </p>
+            </article>
+        </div>
+
     </main>
     <!--PAGE FOOTER-->
     <footer>
-        <p>&copy;2018 Paul's Autos &bull; <a href="tel:9875551234">987-555-1234</a></p>
+        <p>&copy;2018 Paul's Autos &bull;
+            <a href="tel:9875551234">987-555-1234</a>
+        </p>
     </footer>
 
 </body>
