--- a/RWD/index.html
+++ b/RWD/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <div class="wrapper">
     <!--PAGE HEADER-->
     <header>
         <h1>Paul's Autos
@@ -105,6 +106,8 @@
                     possimus voluptatum accusamus alias. Minus, cumque sed fuga neque deleniti aut est soluta quis. Porro
                     vel natus animi.
                 </p>
+            </article>
+            <article>
                 <h3>Topic 6</h3>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. A labore minima quam ea consectetur asperiores voluptatibus repudiandae
@@ -112,6 +115,8 @@
                     possimus voluptatum accusamus alias. Minus, cumque sed fuga neque deleniti aut est soluta quis. Porro
                     vel natus animi.
                 </p>
+            </article>
+            <article>
                 <h3>Topic 7</h3>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. A labore minima quam ea consectetur asperiores voluptatibus repudiandae
@@ -119,6 +124,8 @@
                     possimus voluptatum accusamus alias. Minus, cumque sed fuga neque deleniti aut est soluta quis. Porro
                     vel natus animi.
                 </p>
+            </article>
+            <article>
                 <h3>Topic 8</h3>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. A labore minima quam ea consectetur asperiores voluptatibus repudiandae
@@ -136,6 +143,7 @@
             <a href="tel:9875551234">987-555-1234</a>
         </p>
     </footer>
+</div>
 
 </body>
 
