--- a/LS/index.html
+++ b/LS/index.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LS - LingueStraniere</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <nav>
-Test
-    </nav>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="css/style.css">
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
+  </script>
+  <script src="app.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>LS - LingueStraniere</title>
+</head>
+
+<body>
+  <section class="nav-container">
+    <h1 class="logo">LingueStraniere</h1>
+            <nav class="site-nav">
+                <ul>
+                    <li>
+                        <a href="#home">
+                            <i class="fa fa-home site-nav--icon"></i>Home</a>
+                    </li>
+                    <li>
+                        <a href="#languages">
+                            <i class="fa fa-globe site-nav--icon"></i>Languages</a>
+                    </li>
+                    <li>
+                        <a href="#about">
+                            <i class="fa fa-info site-nav--icon"></i>About</a>
+                    </li>
+                    <li>
+                        <a href="#contact">
+                            <i class="fa fa-envelope site-nav--icon"></i>Contact Us</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <div class="menu-toggle">
+                <div class="hamburger"></div>
+            </div>
+  </section>
+</body>
+
 </html>
