--- a/LS/index.html
+++ b/LS/index.html
@@ -14,33 +14,33 @@
 </head>
 
 <body>
-  <section class="nav-container">
-    <h1 class="logo">LingueStraniere</h1>
-            <nav class="site-nav">
-                <ul>
-                    <li>
-                        <a href="#home">
-                            <i class="fa fa-home site-nav--icon"></i>Home</a>
-                    </li>
-                    <li>
-                        <a href="#languages">
-                            <i class="fa fa-globe site-nav--icon"></i>Languages</a>
-                    </li>
-                    <li>
-                        <a href="#about">
-                            <i class="fa fa-info site-nav--icon"></i>About</a>
-                    </li>
-                    <li>
-                        <a href="#contact">
-                            <i class="fa fa-envelope site-nav--icon"></i>Contact Us</a>
-                    </li>
-                </ul>
-            </nav>
+  <nav class="site-nav">
+    <ul>
+      <li>
+        <a class="logo">LingueStraniere</a>
+      </li>
+      <li>
+        <a href="#home">
+                            <span><i class="fa fa-home site-nav--icon"></i></span>Home</a>
+      </li>
+      <li>
+        <a href="#languages">
+                            <span><i class="fa fa-globe site-nav--icon"></i></span>Languages</a>
+      </li>
+      <li>
+        <a href="#about">
+                            <span><i class="fa fa-info site-nav--icon"></i></span>About</a>
+      </li>
+      <li>
+        <a href="#contact">
+                            <span><i class="fa fa-envelope site-nav--icon"></i></span>Contact Us</a>
+      </li>
+    </ul>
+  </nav>
 
-            <div class="menu-toggle">
-                <div class="hamburger"></div>
-            </div>
-  </section>
+  <div class="menu-toggle">
+    <div class="hamburger"></div>
+  </div>
 </body>
 
 </html>
