responsive navbar fix

--- a/LS/index.html
+++ b/LS/index.html
@@ -14,32 +14,26 @@
 </head>
 
 <body>
-  <nav class="site-nav">
-    <ul>
-      <li>
-        <a class="logo">LingueStraniere</a>
-      </li>
-      <li>
-        <a href="#home">
-                            <span><i class="fa fa-home site-nav--icon"></i></span>Home</a>
-      </li>
-      <li>
-        <a href="#languages">
-                            <span><i class="fa fa-globe site-nav--icon"></i></span>Languages</a>
-      </li>
-      <li>
-        <a href="#about">
-                            <span><i class="fa fa-info site-nav--icon"></i></span>About</a>
-      </li>
-      <li>
-        <a href="#contact">
-                            <span><i class="fa fa-envelope site-nav--icon"></i></span>Contact Us</a>
-      </li>
-    </ul>
-  </nav>
-
-  <div class="menu-toggle">
-    <div class="hamburger"></div>
+  <div class="Navbar">
+    <nav class="Navbar__Items">
+      <div class="Navbar__Link Navbar__Link-brand">
+        LingueStraniere
+      </div>
+    </nav>
+    <nav class="Navbar__Items Navbar__Items--right">
+      <div class="Navbar__Link">
+        <span><i class="fa fa-home"></i></span>Home
+      </div>
+      <div class="Navbar__Link">
+        <span><i class="fa fa-globe"></i></span>Languages
+      </div>
+      <div class="Navbar__Link">
+        <span><i class="fa fa-info"></i></span>About
+      </div>
+      <div class="Navbar__Link">
+        <span><i class="fa fa-envelope"></i></span>Contact Us
+      </div>
+    </nav>
   </div>
 </body>
 
