add hamburger icon to the mobile menu

--- a/LS/index.html
+++ b/LS/index.html
@@ -15,9 +15,13 @@
 
 <body>
   <div class="Navbar">
+
     <nav class="Navbar__Items">
-      <div class="Navbar__Link Navbar__Link-brand">
+      <div class="Navbar__Link Navbar__Link-brand" >
         LingueStraniere
+      </div>
+      <div class="Navbar__Link Navbar__Link-toggle">
+        <i class="fa fa-bars"></i>
       </div>
     </nav>
     <nav class="Navbar__Items Navbar__Items--right">
