hamburger menu fix

--- a/LS/index.html
+++ b/LS/index.html
@@ -8,22 +8,21 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
   </script>
-  <script src="app.js"></script>
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>LS - LingueStraniere</title>
 </head>
 
 <body>
   <div class="Navbar">
-
-    <nav class="Navbar__Items">
-      <div class="Navbar__Link Navbar__Link-brand" >
+    <div class="Navbar__Items">
+      <div class="Navbar__Link Navbar__Link-brand">
         LingueStraniere
       </div>
       <div class="Navbar__Link Navbar__Link-toggle">
         <i class="fa fa-bars"></i>
       </div>
-    </nav>
+    </div>
     <nav class="Navbar__Items Navbar__Items--right">
       <div class="Navbar__Link">
         <span><i class="fa fa-home"></i></span>Home
@@ -39,6 +38,7 @@
       </div>
     </nav>
   </div>
+    <script src="app.js"></script>
 </body>
 
 </html>
