--- a/LS/index.html
+++ b/LS/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+  <!--NAVBAR-->
   <div class="Navbar">
     <div class="Navbar__Items">
       <div class="Navbar__Link Navbar__Link-brand">
@@ -38,7 +39,11 @@
       </div>
     </nav>
   </div>
-    <script src="app.js"></script>
+  <!--HOME SECTION-->
+  <header id="home-section">
+
+  </header>
+  <script src="app.js"></script>
 </body>
 
 </html>
