--- a/LS/index.html
+++ b/LS/index.html
@@ -41,6 +41,10 @@
   </div>
   <!--HOME SECTION-->
   <header id="home-section">
+    <div id="search-bar">
+      <input type="text" placeholder="Search...">
+      <i class="fa fa-search"></i>
+    </div>
 
   </header>
   <script src="app.js"></script>
